fixed letter spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   margin-top: 50px;
   margin-bottom: 50px;
   height: 50px;
-  letter-spacing: 3px;
+  letter-spacing: 10px;
   font-size: 34px;
   color: #53B2A6;
   text-transform: uppercase;
